--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -48,7 +49,7 @@ android {
 
 dependencies {
     def nav_version = "2.5.3"
-
+    def room_version = "2.4.3"
     implementation "androidx.navigation:navigation-compose:$nav_version"
 
     def lifecycle_version = "2.5.0-alpha02"
@@ -74,4 +75,10 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+}
+
+kapt {
+    correctErrorTypes true
 }
